Fixed a jump in the scrollbtn animation

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -68,7 +68,7 @@ body {
     }
 
     #scroll-btn.active.shift {
-        bottom: 8%;        
+        bottom: 3.5em;        
         opacity: 1;
     }
 }
